# Digital-Wave

./: CMakeLists.txt  main.cpp
Question1/: CMakeLists.txt  main.cpp
Question2/: CMakeLists.txt  main.cpp
question 2/: CMakeLists.txt
